# ChangeLog for dev-libs/pwlib
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/pwlib/ChangeLog,v 1.37 2004/03/09 00:48:59 stkn Exp $

*pwlib-1.6.3 (09 Mar 2004)

  09 Mar 2004; Stefan Knoblich <stkn@gentoo.org> pwlib-1.3.11-r1.ebuild,
  pwlib-1.4.11.ebuild, pwlib-1.5.0.ebuild, pwlib-1.5.2-r1.ebuild,
  pwlib-1.5.2-r2.ebuild, pwlib-1.5.2.ebuild, pwlib-1.6.3.ebuild,
  files/pwlib-1.6.3-install.diff:
  new version, plugin configuration contributed by Edward Middleton
  <edwardmiddleton@k3.dion.ne.jp>. Copyright header updates

*pwlib-1.5.0-r1 (08 Feb 2004)

  08 Feb 2004; <nerdboy@gentoo.org> pwlib-1.5.0-r1.ebuild,
  files/pwlib-1.5.0-r1-gentoo.diff:
  added fix for 2.6.1 kernel header time.h bug

*pwlib-1.5.2-r2 (13 Nov 2003)

  13 Nov 2003; <stkn@gentoo.org> pwlib-1.5.2-r2.ebuild:
  fixes include problems on gcc-2.95 systems when using ssl support,
  found and fixed by Martin Schlemmer <azarah@gentoo.org>
  (bug #33204)

  10 Nov 2003; <stkn@gentoo.org> metadata.xml:
  new maintainer

  09 Nov 2003; Jason Wever <weeve@gentoo.org> pwlib-1.5.2-r1.ebuild:
  Added ~sparc to keywords and fixed library symlink
  s to work on sparc.

*pwlib-1.5.2-r1 (24 Oct 2003)

  24 Oct 2003; <stkn@gentoo.org> pwlib-1.5.2-r1.ebuild:
  install version.h, required fix for asterisk h.323 plugin

  03 Sep 2003; Alastair Tse <liquidx@gentoo.org> pwlib-1.5.0.ebuild:
  marking 1.5.0 as stable x86

*pwlib-1.5.2 (03 Sep 2003)

  03 Sep 2003; Alastair Tse <liquidx@gentoo.org> pwlib-1.5.2.ebuild:
  version bump. fixes to ptlib-config installation. switch back to using
  emake but set MAKEOPTS=-j1

  02 Jul 2003; Patrick Kursawe <phosphan@gentoo.org> pwlib-1.5.0.ebuild:
  Had trouble with parallel make. Changing emake to make.

  27 Jun 2003; Alastair Tse <liquidx@gentoo.org> pwlib-1.5.0.ebuild:
  further fixes. symlinks don't override existing directories using portage :(
