@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/pwlib
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/pwlib/ChangeLog,v 1.37 2004/03/09 00:48:59 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/pwlib/ChangeLog,v 1.38 2004/03/12 01:41:39 stkn Exp $
+
+*pwlib-1.6.3-r1 (12 Mar 2004)
+
+  12 Mar 2004; Stefan Knoblich <stkn@gentoo.org> pwlib-1.6.3-r1.ebuild:
+  this update fixes a gnugk/mysql++ compile problem and other c++ programs
+  that link against pwlib and use the typeid c++ function
 
 *pwlib-1.6.3 (09 Mar 2004)
 
